# ffmpegAndroid

./: README.md  build.gradle  local.properties  settings.gradle
example/: build.gradle
example/src/main/: AndroidManifest.xml
example/src/main/java/demo/simple/ffmpeg/: MainActivity.java
example_ffmpeg/: build.gradle
example_ffmpeg/src/main/java/demo/simple/ffmpeg/: MainActivity.java
ffmpegLib/: build.gradle
ffmpegLib/src/main/: AndroidManifest.xml
ffmpegLib/src/main/cpp/: CMakeLists.txt  ffmpeg_utils.cpp  native_utils.cpp
ffmpegLib/src/main/cpp/ffmpeg/output/include/: cmdutils.c  cmdutils.h  config.h  ffmpeg.c  ffmpeg.h  ffmpeg_dec.c  ffmpeg_demux.c  ffmpeg_filter.c  ffmpeg_mux_init.c  ffmpeg_opt.c  ffmpeg_sched.c  ffmpeg_utils.h  opt_common.c
ffmpegLib/src/main/cpp/ffmpeg/output/include/arm64-v8a/libavcodec/: mathops.h
ffmpegLib/src/main/cpp/ffmpeg/output/include/compat/: va_copy.h
ffmpegLib/src/main/java/com/lxy/ffmpeg/: FFmpegLib.java
gradle/wrapper/: gradle-wrapper.properties
